--- a/FinPlan.Web/Components/Pages/home.razor
+++ b/FinPlan.Web/Components/Pages/home.razor
@@ -80,7 +80,7 @@
     <div class="@(isMaximized ? "video-maximized" : "video-compressed")">
         <div class="video-container position-relative">
             <video controls preload="none" class="@(isMaximized ? "w-100" : "")" style="@(isMaximized ? "max-width: 100%;" : "max-width: 400px; width: 100%;")" poster="/images/narrator.png">
-                <source src="https://rewealthensorage2.blob.core.windows.net/training/ReWealthenBriefIntroSingleScene.mp4" type="video/mp4">
+                <source src="/video/ReWealthenBriefIntroSingleScene.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <button type="button"
